@@ -1,3 +1,8 @@
+2003-01-13  Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GModelDecoder.m: openGModel: added code to import
+	the headers of custom classes read from the .gmodel file.
+
 2003-01-12  Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormDocument.m: -[GormDocument parseHeader:]: Fixed a
